fix h2 alignment

--- a/app/views/detail.module.css
+++ b/app/views/detail.module.css
@@ -99,6 +99,7 @@ img.fluteGirls {
 .community h2 {
   grid-row: 1;
   grid-column: 2 / span 2;
+  align-self: baseline;
 }
 .community .subtitle {
   grid-row: 2;
